tests/ui/lifetimes/mismatched-lifetime-syntaxes-details/macro.stderr
error: hiding or eliding a lifetime that's named elsewhere is confusing
  --> $DIR/macro.rs:10:12
   |
LL |         ($($pair),+, $middle, $($pair),+)
   |            ^^^^^                ^^^^^ the same lifetimes are hidden here
   |            |
   |            the same lifetimes are hidden here
...
LL | fn repeated_macro<'a>(x: &'a u8) -> repeated!(Pair, Pair; &'_ u8) {
   |                           --        -----------------------^^----
   |                           |         |                      |
   |                           |         |                      the same lifetime is elided here
   |                           |         in this macro invocation
   |                           the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
note: the lint level is defined here
  --> $DIR/macro.rs:3:9
   |
LL | #![deny(mismatched_lifetime_syntaxes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `repeated` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consistently use `'a`
   |
LL ~         ($($pair<'a, 'a>),+, $middle, $($pair<'a, 'a>),+)
LL |
...
LL |
LL ~ fn repeated_macro<'a>(x: &'a u8) -> repeated!(Pair, Pair; &'a u8) {
   |

error: aborting due to 1 previous error

